# lightspark-crypto-uniffi

./: .fossa.yml  .gitignore  Cargo.toml  LightsparkCryptoFFI.podspec  Makefile  README.md  RELEASE.md  SECURITY.md  build-swift.sh  build.Dockerfile  build.rs
.github/workflows/: go.yml  publish_python.yml  release-swift.yaml  release-swift.yml  release.yml  rust.yml  test_python.yml
examples/wasm-test/: README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
lightspark-crypto-go/: go.mod  signing.go  signing_test.go
lightspark-crypto-go/internal/: lightspark_crypto.c  lightspark_crypto.go  lightspark_crypto.h
lightspark-crypto-go/libs/darwin/amd64/: liblightspark_crypto.dylib
lightspark-crypto-go/libs/darwin/arm64/: liblightspark_crypto.dylib
lightspark-crypto-kotlin/uniffi/lightspark_crypto/: lightspark_crypto.kt
lightspark-crypto-python/: MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
lightspark-crypto-python/scripts/: generate-linux-arm64.sh  generate-linux.sh  generate-macos-arm64.sh  generate-macos-x86_64.sh  generate-windows.sh
lightspark-crypto-python/src/lightspark_crypto/: __init__.py
lightspark-crypto-python/tests/: test_ffi.py
lightspark-crypto-swift/: Package.swift.txt  lightspark_cryptoFFI.h  lightspark_cryptoFFI.modulemap
lightspark-crypto-swift/lightspark_cryptoFFI.xcframework/: Info.plist
lightspark-crypto-swift/lightspark_cryptoFFI.xcframework/ios-arm64/lightspark_cryptoFFI.framework/Headers/: lightspark_cryptoFFI-umbrella.h
lightspark-crypto-swift/lightspark_cryptoFFI.xcframework/ios-arm64_x86_64-simulator/lightspark_cryptoFFI.framework/Modules/: module.modulemap
src/: crypto.rs  funds_recovery_kit.rs  lib.rs  lightspark_crypto.udl  remote_signing.rs  signer.rs
