[package]
name = "lightspark-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip32 = "0.5.1"
hex = "0.4.3"
rand_core = { "version" = "0.6.4", features = ["getrandom"] }
uniffi = "0.23.0"
k256 = { "version" = "0.13.1", features = ["ecdh"] }

[features]
default = ["uniffi/cli"]

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build" ] }

[lib]
crate-type = ["cdylib", "staticlib"]
name = "lightspark_crypto"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'unpacked'
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
