[metadata]
name = lightspark_crypto_python
url = https://www.lightspark.com/
version = 0.1.0
description = The Python language bindings for lightspark crypto operations
long_description = file: README.rst
long_description_content_type = text/markdown
author = Lightspark Group, Inc.
author_email = info@lightspark.com
license = Apache-2.0
license_files = LICENSE.rst
project_urls =
  Source Code = https://github.com/lightsparkdev/lightspark-crypto-uniffi